# taylor-the-frontend-dev

./: .eslintrc.yml  .gitignore  app.ts  auth.sh  babel.config.cjs  index.mjs  jsdoc-ast.json  jsdoc.conf.json  jwt  myClass.ts  myToken.txt  openapi.json  openapi.yaml  package-lock.json  package.json  planning.md  pyproject.toml  readme.md  tsconfig.json
configs/: .eslintrc.yml  cepell.json  jsdoc.conf.json  tsconfig.json
scripts/: auth.sh  get-token
src/: App.ts  Client.ts  index.ts  load_data.py  main.ts  modded_github.py  readme.md  utils.py
src/agents/: retriever.ts  skill_manager.ts  task_gen.ts  verification.ts
src/prompts/: answer_gen.md  answer_gen_sys.md  answer_gen_usr.md  code_gen.md  code_gen_format.md  code_gen_prefix.md  code_gen_suffix.md  code_output_parser.ts  code_prompt_template.ts  question_gen.md  question_gen_sys.md  question_gen_usr.md  self_verification.md  task_gen.md  task_gen_sys.md  task_gen_usr.md  verification_format.md  verification_output_parser.ts  verification_prompt_template.ts  verification_sys.md  verification_usr.md
src/routes/: code_gen_route.ts  file_routes.ts  github_routes.ts  skill_lib_route.ts  task_route.ts  verification_route.ts
src/utils/: CodeWrapper.ts  Task.ts  fileTools.ts  gh.ts  github_utils.ts  logger.ts  validators.ts
tests/: fs_routes.test.ts  readme.md
tests/utils/: gh.test.ts  test_gh.ts
